--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tomates FC | Official WebSite</title>
+    <title>Tomates FC | Sitio Oficial</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo-png.png" type="image/png">
@@ -23,79 +23,22 @@
         </nav>
     </header>
     
-    <!-- Defensas -->
-    <section class="defensas">
-        <div class="title"><h1>Plantilla del Equipo</h1></div>
-        <div class="defensas-title"><h2>Defensores</h2></div>
-        <div class="player-cards">
-            <div class="player-card" onclick="openPlayerDetails('Leandro Zavala', 'images/leandro-stats.jpeg', 1, 0, 1)">
-                <div class="player-number">5</div>
-                <div class="player-info">
-                    <h2 class="player-name">Leandro Zavala</h2>
-                </div>
-            </div>
-            <div class="player-card" onclick="openPlayerDetails('Francisco Lizama', 'images/fran-stats.jpeg', 0, 0, 0)">
-                <div class="player-number">6</div>
-                <div class="player-info">
-                    <h2 class="player-name">Francisco Lizama</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Mediocampistas -->
-    <section class="mediocampistas">
-        <div class="mediocampistas-title"><h2>Mediocampistas</h2></div>
-        <div class="player-cards">
-            <div class="player-card" onclick="openPlayerDetails('Diego Manque', 'images/diego-stats.jpeg', 1, 7, 8)">
-                <div class="player-number">10</div>
-                <div class="player-info">
-                    <h2 class="player-name">Diego Manque</h2>
-                </div>
-            </div>
-            <div class="player-card" onclick="openPlayerDetails('Sebastian Sandoval', 'images/seba-stats.jpeg', 1, 1, 1)">
-                <div class="player-number">11</div>
-                <div class="player-info">
-                    <h2 class="player-name">Sebastian Sandoval</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Delanteros -->
-    <section class="delanteros">
-        <div class="delanteros-title"><h2>Delanteros</h2></div>
-        <div class="player-cards">
-            <div class="player-card" onclick="openPlayerDetails('Benjamin Garces', 'images/benja-stats.jpeg', 1, 12, 4)">
-                <div class="player-number">7</div>
-                <div class="player-info">
-                    <h2 class="player-name">Benjamin Garces</h2>
-                </div>
-            </div>
-            <div class="player-card" onclick="openPlayerDetails('Matias Paredes', 'images/mati-stats.jpeg', 0, 0, 0)">
-                <div class="player-number">9</div>
-                <div class="player-info">
-                    <h2 class="player-name">Matias Paredes</h2>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Player Details Modal -->
-    <div id="player-modal" class="player-modal" onclick="closePlayerDetails(event)">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <span class="close-btn" onclick="closePlayerDetails(event)">&times;</span>
-            <div class="player-details">
-                <img id="player-photo" src="" alt="Player Photo">
-                <div class="details-text">
-                    <h2 id="player-name">Nombre del Jugador</h2>
-                    <p><strong>Partidos:</strong> <span id="player-matches">0</span></p>
-                    <p><strong>Goles:</strong> <span id="player-goals">0</span></p>
-                    <p><strong>Asistencias:</strong> <span id="player-assists">0</span></p>
-                </div>
-            </div>
+<!-- Sección de opciones (Plantilla y Partidos) -->
+<section id="mainSection">
+    <div class="half left" id="plantilla">
+        <div class="content">
+            <h2>Plantilla</h2>
+            <a href="plantilla.html" class="btn btn-primary">Ver Plantilla</a>
         </div>
     </div>
+    <div class="half right" id="partidos">
+        <div class="content">
+            <h2>Partidos</h2>
+            <a href="partidos.html" class="btn btn-primary">Ver Historial</a>
+        </div>
+    </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="footer">
@@ -112,6 +55,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="slider.js"></script>
 </body>
 </html>
