--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="half right" id="partidos">
         <div class="content">
             <h2>Partidos</h2>
-            <a href="partidos.html" class="btn btn-primary">Ver Historial</a>
+            <a href="partidos.html" class="btn btn-primary">Ver Partidos</a>
         </div>
     </div>
 </section>
