--- a/plantilla.html
+++ b/plantilla.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
-                <a href="#"><img src="images/logo.jpeg" alt="logo"> Tomates FC</a>
+                <a href="index.html"><img src="images/logo.jpeg" alt="logo"> Tomates FC</a>
             </div>
             <div class="menu">
                 <ul class="menu-list">
