Actualizar partidos.html

--- a/partidos.html
+++ b/partidos.html
@@ -41,7 +41,7 @@
             </div>
             <div class="partido">
                 <h3>Partido 4</h3>
-                <p>Tomates FC vs Equipo 4</p>
+                <p>Tomates FC 5 vs 15 Vaqueros</p>
             </div>
             <div class="partido">
                 <h3>Partido 5</h3>
