--- a/partidos.html
+++ b/partidos.html
@@ -33,11 +33,11 @@
             </div>
             <div class="partido">
                 <h3>31/01/2025</h3>
-                <p>Tomates FC 19 vs 15 Equipo 2</p>
+                <p>Tomates FC 19 vs 15 Vaqueros</p>
             </div>
             <div class="partido">
                 <h3>04/04/2025</h3>
-                <p>Tomates FC 4 vs 15 Equipo 3</p>
+                <p>Tomates FC 4 vs 15 Manchester ICI</p>
             </div>
             <div class="partido">
                 <h3>01/05/2025</h3>
