--- a/plantilla.html
+++ b/plantilla.html
@@ -78,7 +78,7 @@
                     <h2 class="player-name">Matias Paredes</h2>
                 </div>
             </div>
-            <div class="player-card" onclick="openPlayerDetails('Cristobal Santibañez', 'images/cris-stats.jpeg', 3, 8, 1)">
+            <div class="player-card" onclick="openPlayerDetails('Cristobal Santibañez', 'images/cris_stats.jpeg', 3, 8, 1)">
                 <div class="player-number">12</div>
                 <div class="player-info">
                     <h2 class="player-name">Cristobal Santibañez</h2>
