--- a/partidos.html
+++ b/partidos.html
@@ -44,8 +44,8 @@
                 <p>Tomates FC 5 vs 15 Vaqueros</p>
             </div>
             <div class="partido">
-                <h3>Partido 5</h3>
-                <p>Tomates FC vs Equipo 5</p>
+                <h3>09/05/2025</h3>
+                <p>Tomates FC 10 vs 8 Defensa y Justicia</p>
             </div>
             <div class="partido">
                 <h3>Partido 6</h3>
