Actualizar partidos.html

--- a/partidos.html
+++ b/partidos.html
@@ -45,7 +45,7 @@
             </div>
             <div class="partido">
                 <h3>09/05/2025</h3>
-                <p>Tomates FC 10 vs 8 Defensa y Justicia</p>
+                <p>Tomates FC 10 vs 8 Real Justicia</p>
             </div>
             <div class="partido">
                 <h3>Partido 6</h3>
