Actualizar partidos.html

--- a/partidos.html
+++ b/partidos.html
@@ -48,8 +48,8 @@
                 <p>Tomates FC 10 vs 8 Real Justicia</p>
             </div>
             <div class="partido">
-                <h3>Partido 6</h3>
-                <p>Tomates FC vs Equipo 6</p>
+                <h3>24/05/2025</h3>
+                <p>Tomates FC 2 vs 15 Maradona Team</p>
             </div>
         </div>
     </section>
