Actualizar partidos.html

--- a/partidos.html
+++ b/partidos.html
@@ -51,6 +51,10 @@
                 <h3>24/05/2025</h3>
                 <p>Tomates FC 2 vs 15 Maradona Team</p>
             </div>
+<div class="partido">
+                <h3>30/05/2025</h3>
+                <p>Tomates FC 9 vs 7 Real Justicia</p>
+            </div>
         </div>
     </section>
 
