Actualizar partidos.html

--- a/partidos.html
+++ b/partidos.html
@@ -55,6 +55,10 @@
                 <h3>30/05/2025</h3>
                 <p>Tomates FC 9 vs 7 Real Justicia</p>
             </div>
+<div class="partido">
+                <h3>27/06/2025</h3>
+                <p>Tomates FC 5 vs 5 Resistencia IC</p>
+            </div>
         </div>
     </section>
 
